fix position shift due to font size change

--- a/packages/@kws3/ui/styles/Timeline.scss
+++ b/packages/@kws3/ui/styles/Timeline.scss
@@ -29,7 +29,8 @@
     }
     &:before {
       top: 50%;
-      left: -0.55rem;
+      left: 0;
+      margin-left: -7.7px;
       margin-top: -15px;
       position: absolute;
       height: 15px;
